# vault-exercise

./: .gitignore  README.md  notes.md  notes_wip.md
config/: local.json
harness/: Cargo.toml
harness/src/: main.rs  service.rs
harness/src/harness/: actions.rs  chain.rs  chain_loop.rs  config.rs  contracts.rs  generators.rs  mod.rs  order_loop.rs  price.rs  setup.rs  wallet.rs
scripts/: run.sh  setup.sh
service/: Cargo.toml
service/src/: chain.rs  chain_tests.rs  engine.rs  engine_tests.rs  main.rs  routes.rs  routes_tests.rs  runtime.rs  sequencing.rs  sequencing_tests.rs  stats.rs  tasks.rs  tasks_tests.rs  types.rs
service/src/engine/: balances.rs  book.rs  exposure.rs  inflight.rs  matching.rs  math.rs  mod.rs  orders.rs  snapshot.rs
service/src/tasks/: background.rs
service/src/tasks/settlement/: concurrency.rs  failure.rs  mod.rs  outcome.rs  requeue.rs  settlement_tests.rs
