[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.4", features = ["full"] }
anyhow = "1.0.102"
futures = "0.3"
rand = { version = "0.9", features = ["small_rng"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7"
