[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.4", features = ["full"] }
anyhow = "1.0.102"
axum = "0.8"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.52.1", features = ["full"] }
